<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".edit_movie">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/movieName"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/movieName"
              android:hint="@string/movieNameHint"
              android:inputType="text"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/movieDescrip"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/movieDescrip"
              android:hint="@string/movieDescripHint"
              android:inputType="textLongMessage"/>

    <TextView android:id="@+id/movieLangText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/movieLangText"/>

    <RadioGroup android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/langRadioGroup"
                android:orientation="horizontal"
                android:checkedButton="@id/rbtn1">

        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/movieLangText"
                     android:layout_alignLeft="@id/movieLangText"
                     android:id="@+id/rbtn1"
                     android:text="@string/rbtn1Text"/>

        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@id/rbtn1"
                     android:layout_toRightOf="@id/rbtn1"
                     android:id="@+id/rbtn2"
                     android:text="@string/rbtn2Text"/>

        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@id/rbtn2"
                     android:layout_toRightOf="@id/rbtn2"
                     android:id="@+id/rbtn3"
                     android:text="@string/rbtn3Text"/>

        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@id/rbtn3"
                     android:layout_toRightOf="@id/rbtn3"
                     android:id="@+id/rbtn4"
                     android:text="@string/rbtn4Text"/>
    </RadioGroup>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/rlseDate"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/movieReleaseDate"
              android:hint="@string/movieReleaseDateHint"
              android:inputType="date"/>

    <CheckBox android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/chkbxNSFW"
              android:text="@string/movieNSFW"
              android:onClick="showChkbx"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="1">

        <CheckBox android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.5"
                  android:id="@+id/chkbxVio"
                  android:text="@string/chkbxVioText"
                  android:visibility="gone"/>

        <CheckBox android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.5"
                  android:id="@+id/chkbxLang"
                  android:text="@string/chkbxLangText"
                  android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>